# nim_for_python_programmers

./: README.md  gera.sh  init.sh  pyproject.toml  translate.py
locale/pt_br/LC_MESSAGES/: Nim-for-Python-Programmers.md  Nim-for-Python-Programmers.mo  Nim-for-Python-Programmers.po
